--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -439,7 +439,7 @@ transition: all 0.3s ease;
 }
 
 .slick-prev {
-  left: -100px !important;
+  left: -60px !important;
 
   @media (max-width: 991px) {
     left: -50px !important;
@@ -463,7 +463,7 @@ transition: all 0.3s ease;
 }
 
 .slick-next {
-  right: -100px !important;
+  right: -60px !important;
 
   @media (max-width: 991px) {
     right: -50px !important;
@@ -1031,6 +1031,7 @@ transition: all 0.3s ease;
   &::-webkit-scrollbar {
     display: none;
   }
+  mask-image: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgb(0, 0, 0) 14.5%, rgb(0, 0, 0) 85.5%, rgba(0, 0, 0, 0) 100%);
 }
 
 .testimonial-card {
@@ -1095,4 +1096,75 @@ transition: all 0.3s ease;
   .testimonial-quote {
     font-size: 1rem;
   }
+}
+
+/* Option 1: Google Fonts (Recommended - Free) */
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Dancing+Script:wght@400;700&display=swap');
+
+.calligraphy-font {
+  font-family: 'Great Vibes', cursive;
+  font-size: 2.5rem; /* Adjust as needed */
+  font-weight: 400;
+  letter-spacing: 1px;
+}
+
+/* Option 2: Alternative fonts */
+.calligraphy-font.dancing {
+  font-family: 'Dancing Script', cursive;
+}
+
+.calligraphy-font.allura {
+  font-family: 'Allura', cursive;
+}
+
+.pageHeading{
+  h1{
+    font-size: 10em;
+    font-weight: bold;
+    text-align: center;
+  } 
+}
+
+.aboutContent{
+  text-align: center;
+  
+}
+
+// .aboutBg{
+//   background-image: url(../../public/assets/bubble.png);
+//   background-position: center;
+//   background-size: 20%;
+//   background-repeat: no-repeat;
+// }
+.aboutBg {
+  position: relative;
+  overflow: hidden; /* optional: image bahar na nikle */
+}
+
+/* background image ko pseudo-element pe shift karo */
+.aboutBg::before {
+  content: "";
+  position: absolute;
+  inset: 0; /* top:0; right:0; bottom:0; left:0; */
+  background-image: url(../../public/assets/bubble.png);
+  background-position: center;
+  background-size: 20%;
+  background-repeat: no-repeat;
+  transform-origin: center center;
+  animation: rotateBg 28s linear infinite;
+  // z-index: -1;
+}
+
+/* rotation keyframes */
+@keyframes rotateBg {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.aboutImgsection{
+  width: 100%;
 }
